# RockPaperScissors

./: .gitignore  CMakeLists.txt  README.md  RockPaperScissors.pro
ressources/: ressource.qrc
ressources/translations/: RockPaperScissors_de.ts
scripts/: updateTranslations.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h
translations/: RockPaperScissors_de_DE.ts
ui/: mainwindow.ui
